<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Low Light Texting</string>
    <string name="phone_no_label">Enter Phone Number:</string>
    <string name="phone_no_hint">Phone Number</string>
    <string name="txt_message">Message:</string>
    <string name="btn_send_txt">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_send_message">Low Light Texting</string>
    <string name="title_activity_main">Low Light Texting</string>
    <string name="title_activity_home">Low Light Texting</string>
    <string name="contacts_label">Contacts</string>
    <string name="compose_label">Compose</string>
    <string name="conversations_label">Conversations</string>
    <string name="recent_sent_label">Recent - Sent</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sent">SentActivity</string>
    <string name="no_message">No Messages</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="single_conv_label">MMS Conversation</string>
    <string name="is_it_mms_label">Is it MMS?</string>
    <string name="new_text_message_hint">Enter Message</string>
    <string name="title_activity_conversation_array_adapter">ConversationArrayAdapter</string>
    <string name="title_activity_contact_conv">ContactConv</string>
    <string name="title_activity_message_receiver">MessageReceiver</string>
    <string name="title_activity_mms_conversation">MmsConversation</string>
    <string name="title_activity_smsreceiver">SMSReceiver</string>
    <string name="title_activity_multi_conversation">MultiConversationActivity</string>
    <string name="title_activity_multi_conversation_adapter">MultiConversationAdapter</string>
    <string name="title_activity_is_it_mms">IsItMms</string>
    <string name="keyboard_CommaText">,</string>
    <string name="keyboard_CommaTag">,</string>
    <string name="keyboard_FullStopText">.</string>
    <string name="keyboard_FullStopTag">.</string>

</resources>